Tercera pre entrega

--- a/index.html
+++ b/index.html
@@ -7,9 +7,31 @@
     <title>Tanques | 1945 </title>
 </head>
 <body>
-
-
+<div id="contenedor">
+    <section id="resumen">
+    <h2 id="h2Ww2"></h2>
+    </section>
+    <div class="navbar">
+        <button class="btn" id="btn1" >alemania</button>
+        <button class="btn" id="btn2" >urss</button>
+        <button class="btn" id="btn3" >aliados</button>
+    </div>
+    <div id="juntos">
+    <div id="divPrincipal">
+        <section class="section1">
+            <h2 id="h2Inicial"></h2>
+            <ul id="idAlemania">  </ul>
+        </section>
+    </div> 
+    <div class="cardTanques">
+        <img  class="fotoCards" alt="Foto">
+        <h2 class="tituloCards"></h2>
+        <p class="descripcion"></p>
+    </div>
+    </div>
+</div>
     <script src="js/bd.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
+
