--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- FONTAWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="shortcut icon" href="/imagenes/icono.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./imagenes/icono.jpg" type="image/x-icon">
     <title>Diario de Guerra </title>
 </head>
 <body>
@@ -41,21 +41,21 @@
     <!-- The slideshow/carousel -->
     <div class="carousel-inner"  id="padre">
         <div  class="carousel-item active">
-        <img src="" alt="" class="d-block" id="img1">
+        <img src="" alt="Tanque" class="d-block" id="img1">
         <div class="carousel-caption">
         <h3 id="h31"></h3>
         <p id="p1"></p>
         </div>
     </div>
     <div class="carousel-item">
-        <img src="" alt="Chicago" class="d-block" width=" height=""  id="img2">
+        <img src="" alt="tanque" class="d-block" width=" height=""  id="img2">
         <div class="carousel-caption">
         <h3 id="h32"></h3>
         <p id="p2"></p>
         </div> 
     </div>
     <div class="carousel-item">
-        <img src="" alt="" class="d-block"   id="img3">
+        <img src="" alt="tanque" class="d-block"   id="img3">
         <div class="carousel-caption">
         <h3 id="h33"></h3>
         <p id="p3"></p>
@@ -134,17 +134,18 @@
     
     <footer>
         <div class="footer">
-            <h2>Diario de guerra</h2>
-            <p>Este blog está dedicado a la Segunda Guerra Mundial, ofreciendo información histórica, análisis y relatos relacionados con este importante período.</p>
-            <p>Las imágenes utilizadas en este sitio son propiedad de diversas fuentes históricas y están destinadas exclusivamente para fines educativos.</p>
+        <h2>Diario de guerra</h2>
+        <p>Este blog está dedicado a la Segunda Guerra Mundial, ofreciendo información histórica, análisis y relatos relacionados con este importante período.</p>
+        <p>Las imágenes utilizadas en este sitio son propiedad de diversas fuentes históricas y están destinadas exclusivamente para fines educativos.</p>
+        <p class="copyright">&copy; 2024 Diario de Guerra. Todos los derechos reservados.</p>
         </div>
     </footer>
 </div>
 
 </div>
-    <script src="js/bd.js"></script>
-    <script src="js/graficos.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/bd.js" defer></script>
+    <script src="js/graficos.js" defer></script>
+    <script src="js/main.js" defer></script>
     <!-- bs -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.3/dist/sweetalert2.all.min.js"></script>
