final agrego github

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
         <p>Este blog está dedicado a la Segunda Guerra Mundial, ofreciendo información histórica, análisis y relatos relacionados con este importante período.</p>
         <p>Las imágenes utilizadas en este sitio son propiedad de diversas fuentes históricas y están destinadas exclusivamente para fines educativos.</p>
         <p class="copyright">&copy; 2024 Diario de Guerra. Todos los derechos reservados.</p>
+        <p>Desarrollado por : <a href="https://github.com/1945Tomas"><i class="fa-brands fa-github"></i> Tomás Sayús</a></p>
         </div>
     </footer>
 </div>
